--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
             <h2 class="modal-heading">Поиск гостиницы в Седоне</h2>
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
               <fieldset class="search-form-group">
-                <label class="search-form-label" for="">Дата заезда:</label>
+                <label class="search-form-label" for="date-from">Дата заезда:</label>
                 <input class="search-form-input" type="text" id="date-from" name="date-from" value="27 апреля 2020" placeholder="27 апреля 2025" required>
                 <span class="search-form-message search-form-message-error">Мы не можем отправить вас в прошлое.</span>
               </fieldset>
               <fieldset class="search-form-group">
-                <label class="search-form-label" for="">Дата выезда:</label>
+                <label class="search-form-label" for="date-to">Дата выезда:</label>
                 <input class="search-form-input" type="text" id="date-to" name="date-to" value="1 сентября 2023" placeholder="1 сентября 2025" required>
                 <span class="search-form-message">На эти даты есть свободные номера. Пока есть.</span>
               </fieldset>
