--- a/catalog.html
+++ b/catalog.html
@@ -105,7 +105,7 @@
                 </label>
                 <label class="form-filter-range-control">
                   <span class="form-filter-range-text">До</span>
-                  <input class="form-filter-range-input form-filter-range-input-max" type="number" id="min-cost" name="min-cost" min="0" max="12000" step="1" value="9000" placeholder="12000">
+                  <input class="form-filter-range-input form-filter-range-input-max" type="number" id="max-cost" name="max-cost" min="0" max="12000" step="1" value="9000" placeholder="12000">
                 </label>
               </p>
               <div class="form-filter-range-slider range">
