Исправляет ошибки в стилизации

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="service-promo">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
           <p class="service-about">Опытный персонал и качественное обслуживание!</p>
           <ul class="service-list">
-            <li class="service-item dark service-item-hotel">
+            <li class="service-item service-item-hotel">
               <h3 class="service-title">Жильё</h3>
               <p class="service-description">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
@@ -104,7 +104,7 @@
               <h3 class="service-title">Еда</h3>
               <p class="service-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
-            <li class="service-item dark service-item-souvenir">
+            <li class="service-item service-item-souvenir">
               <h3 class="service-title">Сувениры</h3>
               <p class="service-description">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
             </li>
